fixed formatting issue with overview by removing x gutter, and hiding overflow on the page

--- a/src/css/main/Overview.css
+++ b/src/css/main/Overview.css
@@ -1,6 +1,10 @@
 /*
     Styling for major Divs in Overview main component
 */
+body {
+    overflow: hidden;
+}
+
 #overview-center-col {
     min-width: 900px;
     max-width: 1000px;
